# Py_web_HW_06

./: README.md  create_db.py  create_table.py  create_table_script.sql  fill_data.py  main.py  pyproject.toml  query_n.py  salary.sql  seed.py
query/: query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
test/: connect.py  create_table.py  seed.py  select_data.py
test2/: count_employee_by_company.py  fill_data.py  select_first.py  sql_script.sql
